Allow game schedule to work inline with live game
Add dummy contentId for 0 contentId
Add gameId & gameCode for mc game schedule
Add scores to gameschedules in mc
Refactor mergeLive method to meaningful small methods.
Fix issue of stadium name not displaying at anons
Corrected scorecard title
Added 6 months prior game schedule to media card
Increase the page size to accomodate all scoring events
Fix the error of having 1 group count causing games to be unavailable
Fix the issue of default config getting reset
Skewed schedule to allow for easy degugging
Fixed the class cast exception because of Jayway json
Caught Read timeout from socket
Add startTime & stopTime for the actual game schedule
Added tapeDelay for all games
Update gnu date to docker
Make only one instance of solrcloud client
Fixed the join between schedule and program
Changed polling for live to 5 seconds
Aligned interval of batch jobs & Kafka jobs
Added priority order for channel
Refactored live info job to run only on live schedule rather than forever